src/objects/Merge_Query__c.object
<CustomObject>
    <description>List of merge queries to be processed for adding merge candidates.</description>
    <fields>
        <fullName>IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsTest tracks whether this was created by a test process.</description>
        <inlineHelpText>IsTest tracks whether this was created by a test process.</inlineHelpText>
        <label>IsTest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge_Criteria_Values__c</fullName>
        <label>Merge Criteria Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Metric__c</fullName>
        <label>Merge Metric</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>Object type (e.g., Account, Contact)</description>
        <label>Object Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Query__c</fullName>
        <label>SOQL Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Object_Account_Id__c</fullName>
        <label>Relationship Path to Account Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_Id__c</fullName>
        <label>Source Object Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>54</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Merge Query</label>
    <nameField>
        <displayFormat>MQ-{0000}</displayFormat>
        <label>Merge Query Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>